# EspoAnima

./: .gitattributes  .gitignore  Brush  CMakeLists.txt  Canvas.cpp  Canvas.h  EspoAnima.pro  FrameTimeLine.cpp  FrameTimeLine.h  README.md  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubarhelper.h  resources.qrc  style.css
news/: index.html  style.css
src/: Canvas.h  main.cpp  mainwindow.cpp  mainwindow.h  menubarhelper.cpp
src/app/: Canvas.cpp  FrameTimeLine.cpp  Layer.cpp  LayerPanel.cpp  NewProjectDialog.cpp  NewProjectWindow.cpp  Preferences.cpp  globals.cpp  main.cpp  mainwindow.cpp  menubarhelper.cpp
src/app/colorpicker/: ColorPicker.cpp  ColorPicker.h
src/app/headers/: Canvas.h  FrameTimeLine.h  Layer.h  LayerPanel.h  NewProjectDialog.h  NewProjectWindow.h  Preferences.h  globals.h  mainwindow.h
